[project]
name = "poshmark-nursery"
version = "1.0.0"
description = """
    Poshmark sharing bot. Share your items and share back the closets of people who
    shared your items.
"""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "selenium>=4.38.0",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "flake8>=7.3.0",
    "pylint>=4.0.4",
]
