[project]
name = "poshmark-nursery"
version = "1.0.0"
description = """\
    Poshmark sharing bot. Share your items and share back the closets of people who \
    shared your items.\
"""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.3",
    "selenium>=4.39.0",
    "undetected>=0.0.9",
]

[dependency-groups]
dev = [
    "ruff>=0.14.13",
]

[tool.ruff]
line-length = 89

[tool.ruff.format]
line-ending = "lf"
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
docstring-code-format = true
docstring-code-line-length = 89
